--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+r: bioc-release
 cache: packages
 after_success:
     - Rscript -e 'covr::codecov()'
