--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ cache: packages
 before_install:
   - Rscript -e 'install.packages("shiny", lib="/home/travis/R-bin/lib/R/library/")'
   - Rscript -e 'install.packages("Seurat", lib="/home/travis/R-bin/lib/R/library/")'
+  - Rscript -e 'install.packages("uwot", lib="/home/travis/R-bin/lib/R/library/")'
 after_success:
     - Rscript -e 'covr::codecov()'
