--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@
 language: R
 r: bioc-release
 cache: packages
+env:
+  global:
+    - R_CHECK_ARGS="--no-build-vignettes --no-manual --timings"
+    - _R_CHECK_TIMINGS_="0"
 before_install:
   - Rscript -e 'install.packages("shiny", lib="/home/travis/R-bin/lib/R/library/")'
   - Rscript -e 'install.packages("Seurat", lib="/home/travis/R-bin/lib/R/library/")'
