--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,32 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
-  r: bioc-release
+language: r
+sudo: true
 cache: packages
+warnings_are_errors: false
+
+# environment variables set for all builds
 env:
   global:
-    - R_CHECK_ARGS="--no-build-vignettes --no-manual --timings"
-    - _R_CHECK_TIMINGS_="0"
+    - BIOC_USE_DEVEL="FALSE"  ## Use the current release version
+    - R_BUILD_ARGS="--no-build-vignettes --no-manual"
+    - R_CHECK_ARGS="--no-build-vignettes --no-manual --timings"  ## do not build vignettes or manual
+    - _R_CHECK_TIMINGS_="0"  ## get the timing information for the examples for all of your functions
+
+# do not build vignettes...takes too long and times out on travis
+r_build_args: --no-build-vignettes --no-manual
+r_check_args: --no-build-vignettes --no-manual --timings
+
+r:
+ - release
+
+# for codecov
+r_packages:
+  - covr
+
+# we need to install BiocInstaller for testing Bioconductor packages
+bioc_required: true
+
+# only report coverage for the release version
 after_success:
-    - Rscript -e 'covr::codecov()'
-warnings_are_errors: false
+  - test $TRAVIS_R_VERSION_STRING = 'release' && Rscript -e 'covr::codecov()'
