--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,9 @@ Version: 0.1.0
 Author: Saskia Freytag
 Maintainer: Saskia Freytag <saskia.freytag@perkins.uwa.edu.au>
 Description: Builds hexbin plots for variables and dimension reduction stored
-    in single cell omics data such as SingleCellExperiment and SeuratObject.
+    in single cell omics data such as SingleCellExperiment and SeuratObject. The
+    ideas used in this package are based on the excellence work of Dan Carr,
+    Nicholas Lewin-Koh, Martin Maechler and Thomas Lumley.
 Depends: SingleCellExperiment,
     Seurat,
     ggplot2,
