--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,9 @@ exportMethods(plot_hexbin_gene)
 exportMethods(plot_hexbin_meta)
 import(Seurat)
 import(SingleCellExperiment)
-import(dplyr)
 import(ggplot2)
 importFrom(cluster,pam)
+importFrom(dplyr,as_tibble)
 importFrom(hexbin,hcell2xy)
 importFrom(hexbin,hexbin)
 importFrom(stats,median)
-importFrom(tidyr,nest)
