--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ warnings_are_errors: false
 # environment variables set for all builds
 env:
   global:
-    - BIOC_USE_DEVEL="FALSE"  ## Use the current release version
+    - BIOC_USE_DEVEL="TRUE"  ## Use the current release version
     - R_BUILD_ARGS="--no-build-vignettes --no-manual"
     - R_CHECK_ARGS="--no-build-vignettes --no-manual --timings"  ## do not build vignettes or manual
     - _R_CHECK_TIMINGS_="0"  ## get the timing information for the examples for all of your functions
