--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: Builds hexbin plots for variables and dimension reduction stored
     in single cell omics data such as SingleCellExperiment and SeuratObject. The
     ideas used in this package are based on the excellence work of Dan Carr,
     Nicholas Lewin-Koh, Martin Maechler and Thomas Lumley.
-Depends: SingleCellExperiment,
+Depends: SingleCellExperiment (>= 1.7.4),
     Seurat,
     ggplot2
 Imports: hexbin,
