--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
+r: bioc-devel
 sudo: true
 cache: packages
 warnings_are_errors: false
