adhere to BiocCheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,6 @@ importFrom(dplyr,as_tibble)
 importFrom(entropy,mi.plugin)
 importFrom(hexbin,hcell2xy)
 importFrom(hexbin,hexbin)
+importFrom(methods,slotNames)
+importFrom(stats,cor)
 importFrom(stats,median)
