--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: schex
 Type: Package
 Title: Hexbin plots for single cell omics data
-Version: 0.1.1
+Version: 0.0.1
 Author: Saskia Freytag
 Maintainer: Saskia Freytag <saskia.freytag@perkins.uwa.edu.au>
 Description: Builds hexbin plots for variables and dimension reduction stored
@@ -12,7 +12,7 @@ Depends: SingleCellExperiment (>= 1.7.4),
     Seurat,
     ggplot2
 Imports: hexbin,
-            scater,
+        stats,
             methods,
             cluster,
             dplyr,
@@ -23,8 +23,12 @@ Suggests:
     rmarkdown,
     testthat (>= 2.1.0),
     covr
+URL: https://github.com/SaskiaFreytag/schex
+BugReports: https://github.com/SaskiaFreytag/schex/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+biocViews: Software, Sequencing,
+      SingleCell, DimensionReduction, Visualization
 VignetteBuilder: knitr
