fix mistakes related to vignettes
Former-commit-id: 08bcb1ff8db668ad349d6a27797ffaef054ed805 [formerly 9063a8383a971bffbf802bd331dbcf2b72066ce6] [formerly a4234dd4422f699741a67b448f6bd60374636f5c [formerly eaeeadc136456b351394e72b96841be5a7e900f6]]
Former-commit-id: 174f3e29e68ea19a15ad67322b6bc3f8cec86929 [formerly 4f898cfb09839e9cade5a44ab0f3fddb6e1f28e3]
Former-commit-id: 29ada3111e177134b3563873ec422a88c4b53d5e

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,12 +22,15 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 2.1.0),
-    covr
+    covr,
+    TENxPBMCData,
+    scater,
+    shinydashboard,
+    iSEE
 URL: https://github.com/SaskiaFreytag/schex
 BugReports: https://github.com/SaskiaFreytag/schex/issues
 License: GPL-3
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 6.1.1
 biocViews: Software, Sequencing,
       SingleCell, DimensionReduction, Visualization
