--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Saskia Freytag
 Maintainer: Saskia Freytag <saskia.freytag@perkins.uwa.edu.au>
 Description: Builds hexbin plots for variables and dimension reduction stored
     in single cell omics data such as SingleCellExperiment and SeuratObject. The
-    ideas used in this package are based on the excellence work of Dan Carr,
+    ideas used in this package are based on the excellent work of Dan Carr,
     Nicholas Lewin-Koh, Martin Maechler and Thomas Lumley.
 Depends: SingleCellExperiment (>= 1.7.4),
     Seurat,
@@ -26,7 +26,9 @@ Suggests:
     TENxPBMCData,
     scater,
     shinydashboard,
-    iSEE
+    iSEE,
+    igraph, 
+    scran
 URL: https://github.com/SaskiaFreytag/schex
 BugReports: https://github.com/SaskiaFreytag/schex/issues
 License: GPL-3
