--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,3 +25,4 @@ importFrom(hexbin,hexbin)
 importFrom(methods,slotNames)
 importFrom(stats,cor)
 importFrom(stats,median)
+importFrom(stats,quantile)
