--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importFrom(methods,slotNames)
 importFrom(scales,hue_pal)
 importFrom(stats,cor)
 importFrom(stats,median)
+importFrom(stats,quantile)
