first working version with new features
Former-commit-id: a582877924f12fd5bc4dad0f286b068e53e0575f
Former-commit-id: 35374d111a6a1bd8cfaf07e397d1fcc1476969a2
Former-commit-id: 69bb0e91498d8647ae9dc0127e2f746449774ac4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports: hexbin,
         dplyr,
         entropy,
         ggforce,
-        scales
+        scales,
+        cowplot
 Suggests: 
     ggrepel,
     knitr,
