--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(make_hexbin)
 export(make_hexbin_label)
+export(plot_hexbin_bivariate)
 export(plot_hexbin_density)
 export(plot_hexbin_density_shiny)
 export(plot_hexbin_fc)
@@ -20,6 +21,8 @@ import(SingleCellExperiment)
 import(ggplot2)
 import(shiny)
 importFrom(cluster,pam)
+importFrom(cowplot,draw_plot)
+importFrom(cowplot,ggdraw)
 importFrom(dplyr,as_tibble)
 importFrom(entropy,mi.plugin)
 importFrom(ggforce,geom_mark_hull)
