finished bivariate plot, changed to logNormCounts in examples

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Imports: hexbin,
         entropy,
         ggforce,
         scales,
-        cowplot
+        grid
 Suggests: 
     ggrepel,
     knitr,
