--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(make_hexbin)
 export(make_hexbin_label)
 export(plot_hexbin_bivariate)
 export(plot_hexbin_density)
-export(plot_hexbin_density_shiny)
 export(plot_hexbin_fc)
 export(plot_hexbin_feature)
 export(plot_hexbin_feature_plus)
@@ -19,11 +18,11 @@ exportMethods(plot_hexbin_gene)
 import(Seurat)
 import(SingleCellExperiment)
 import(ggplot2)
+import(grid)
 import(shiny)
 importFrom(cluster,pam)
-importFrom(cowplot,draw_plot)
-importFrom(cowplot,ggdraw)
 importFrom(dplyr,as_tibble)
+importFrom(dplyr,tibble)
 importFrom(entropy,mi.plugin)
 importFrom(ggforce,geom_mark_hull)
 importFrom(hexbin,hcell2xy)
