changes to make it compatibale with R 4.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ exportMethods(make_hexbin)
 exportMethods(plot_hexbin_gene)
 import(Seurat)
 import(SingleCellExperiment)
+import(concaveman)
 import(ggplot2)
 import(grid)
 import(shiny)
