--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: schex
 Type: Package
 Title: Hexbin plots for single cell omics data
-Version: 1.1.3
+Version: 1.1.4
 Author: Saskia Freytag
 Maintainer: Saskia Freytag <saskia.freytag@perkins.uwa.edu.au>
 Description: Builds hexbin plots for variables and dimension reduction stored
@@ -20,7 +20,8 @@ Imports: hexbin,
         entropy,
         ggforce,
         scales,
-        grid
+        grid,
+        concaveman
 Suggests: 
     ggrepel,
     knitr,
