Fixed aes() using tidy eval

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(SingleCellExperiment)
 import(concaveman)
 import(ggplot2)
 import(grid)
+import(rlang)
 importFrom(cluster,pam)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,tibble)
