--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,10 @@ Type: Package
 Title: Hexbin plots for single cell omics data
 Version: 1.7.0
 Authors@R:
-    person("Saskia", "Freytag", email = "saskia.freytag@perkins.uwa.edu.au", role = c("aut", "cre"))
+    person("Saskia", "Freytag", email = "freytag.s@wehi.edu.au", role = c("aut", "cre"))
+    person("Wancheng", "Tang", email = "wanchengt@student.unimelb.edu.au", role = c("ctb"))
+    person("Zimo", "Peng", email = "zimop@student.unimelb.edu.au", role = c("ctb"))
+    person("Jingxiu", "Huang", email = "jmhuang@student.unimelb.edu.au", role = c("ctb"))
 Description: Builds hexbin plots for variables and dimension reduction stored
     in single cell omics data such as SingleCellExperiment and SeuratObject. The
     ideas used in this package are based on the excellent work of Dan Carr,
